chore: fixed vertical alignment of align with button

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -780,3 +780,8 @@ span {
     padding: 3rem 1.5rem;
   }
 }
+
+#apply-button > a {
+  display: flex;
+  align-items: center;
+}
